Fixes to new front page
a lot of things got messed up when new front page changed. fixes to it.

--- a/style.css
+++ b/style.css
@@ -252,8 +252,50 @@ a:link, a:visited {
 /* ------------------------------------ */
 /* ------------------------------------ */
 /* ------------------------------------ */
+/* ------------------------------------ */
+
+@keyframes fade {
+  0%   { opacity: 0; }
+  11.11%   { opacity: 1; }
+  33.33%  { opacity: 1; }
+  44.44%  { opacity: 0; }
+  100% { opacity: 0; }
+}
+
+.fadein {
+	position: relative;
+	max-width: 800px;
+	min-width: 400px;
+	height: 600px;
+	margin: auto;
+}
+
+.fadein img { 
+	width: 100%;
+    opacity:0; 
+    animation-name: fade; 
+    animation-duration: 9s; 
+    animation-iteration-count: infinite; 
+    position:absolute; 
+    left:0; 
+    right:0; 
+}
+
+.fadein img:nth-child(1) { animation-delay: 0s; }
+.fadein img:nth-child(2) { animation-delay: 3s; }
+.fadein img:nth-child(3) { animation-delay: 6s; }
+
+/* ------------------------------------ */
 
 
+.bigname {
+	text-align: center;
+	font-size: 3em;
+	font-weight: 900;
+	text-transform: uppercase;
+	padding-top: 0.5em;
+	padding-bottom: 1em;
+}
 
 .projects {
 	width: 100%;
@@ -323,7 +365,16 @@ a:link, a:visited {
 }
 
 
-
+.dropshadow {
+	background-color: white;
+	border-radius: 4px;
+	border-color: #999;
+	border-width: 1px;
+	padding: 1.5em;
+	box-shadow: 0px 2px 12px #ccc;
+	margin-top: .5em;
+	margin-bottom: 1em;
+}
 
 
 /* ------------------------------------ */
